syntax = "proto3";
option csharp_namespace = "Neuro.Recording.Map";

import "Recording/Common/PositionData.proto";
import "Recording/Map/DoorData.proto";
import "Recording/Map/VentData.proto";

message MapFrame {
    repeated DoorData NearbyDoors = 1;
    repeated VentData NearbyVents = 2;
    PositionData MeetingButton = 3;
}
